# airplay-rust

./: Cargo.toml
src/: main.rs  player.rs
src/discovery/: mod.rs
src/player/: ntp.rs  udp_servers.rs  utils.rs
