[package]
name = "airplay-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdns-sd = { git = "https://github.com/keepsimple1/mdns-sd" }
tokio = { version = "1.29.1", features = ["full"] }
chrono = "0.4"
byteorder = "1.4.3"
socket2 = "0.5"
regex = "1.9.1"
